<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="FB_PC_OneLink_TestSignals" Id="{830d475b-c2d2-428d-8524-f4719c757bfe}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PC_OneLink_TestSignals EXTENDS FB_PC_OneLink_Base
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// XMEAS RANGES
A_FLOW_MAX 				:=10.0;
G_PARAMS.D_FLOW_MAX		:=10.0;
G_PARAMS.E_FLOW_MAX		:=10.0;
G_PARAMS.P_REACTOR_MAX	:=10.0;

G_PARAMS.A_FLOW_MIN 	:=0.0;
G_PARAMS.D_FLOW_MIN		:=0.0;
G_PARAMS.E_FLOW_MIN		:=0.0;
G_PARAMS.P_REACTOR_MIN	:=0.0;

// XMV RANGES
G_PARAMS.A_FLOW_VALVE_MAX	:=10.0;
G_PARAMS.D_FLOW_VALVE_MAX	:=10.0;
G_PARAMS.E_FLOW_VALVE_MAX	:=10.0;
G_PARAMS.REACTOR_CWFV_MAX	:=10.0;

G_PARAMS.A_FLOW_VALVE_MIN			:=0.0;
G_PARAMS.D_FLOW_VALVE_MIN			:=0.0;
G_PARAMS.E_FLOW_VALVE_MIN			:=0.0;
G_PARAMS.REACTOR_CWFV_MIN			:=0.0;

// execute the signal conversion
SUPER^();
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>