<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_Yokogawa_GasSensor" Id="{51921bc6-1655-4663-b75c-db1b30fc5de5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Yokogawa_GasSensor EXTENDS FB_Yokogawa_Base
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	PVfs	: LREAL := 100.0;
	A 		: LREAL := 75.0;
	Tau 	: LREAL := 0.5;
	PV		: LREAL := 0.0;
	tk		: LREAL := 0.0;
	deltaT	:LREAL 	:= 10E-3;
	Pch     : LREAL := 10;
	remk: LREAL := 0.0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// XMEAS RANGES
G_PARAMS.A_FLOW_MAX 	:=PVfs;
G_PARAMS.D_FLOW_MAX		:=PVfs;
G_PARAMS.E_FLOW_MAX		:=PVfs;
G_PARAMS.AC_FLOW_MAX	:=PVfs;

G_PARAMS.A_FLOW_MIN 	:=0.0;
G_PARAMS.D_FLOW_MIN		:=0.0;
G_PARAMS.E_FLOW_MIN		:=0.0;
G_PARAMS.AC_FLOW_MIN	:=0.0;

(* For built-in PV generator
// gas influx variables
tk := tk + deltaT;
remk := lmod(tk,2*Pch);
IF remk < Pch THEN
	PV := A*(1-EXP(-Tau*remk));
ELSE
	PV := A*EXP(-Tau*(remk-pch));
END_IF

G_IO.XMEAS[1] := PV;
G_IO.XMEAS[2] := PV;
G_IO.XMEAS[3] := PV;
G_IO.XMEAS[4] := PV;
*)

// execute the signal conversion
SUPER^();

]]></ST>
    </Implementation>
    <LineIds Name="FB_Yokogawa_GasSensor">
      <LineId Id="22" Count="30" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>