<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_Yokogawa_TestSignals" Id="{0475ce58-124f-48c0-863b-7b79f84a912b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Yokogawa_TestSignals EXTENDS FB_Yokogawa_Base
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
G_PARAMS.A_FLOW_MAX 		:=100.0;
G_PARAMS.D_FLOW_MAX			:=100.0;
G_PARAMS.E_FLOW_MAX			:=100.0;
G_PARAMS.AC_FLOW_MAX		:=100.0;

G_PARAMS.A_FLOW_MIN 		:=0.0;
G_PARAMS.D_FLOW_MIN			:=0.0;
G_PARAMS.E_FLOW_MIN			:=0.0;
G_PARAMS.AC_FLOW_MIN		:=0.0;

(*G_IO.XMEAS[1]:=100;
G_IO.XMEAS[2]:=100;
G_IO.XMEAS[3]:=100;
G_IO.XMEAS[4]:=100;*)

// execute the signal conversion
SUPER^();]]></ST>
    </Implementation>
    <LineIds Name="FB_Yokogawa_TestSignals">
      <LineId Id="10" Count="8" />
      <LineId Id="29" Count="4" />
      <LineId Id="19" Count="2" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>